--- a/package.json
+++ b/package.json
@@ -3,14 +3,22 @@
   "version": "1.0.0",
   "description": "A command-line tool to compare two code repositories and analyze their similarities and differences.",
   "main": "dist/index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/skhetcho/compare-repos.git"
+  },
   "bin": {
-    "repo-compare": "./dist/cli.js"
+    "compare-repos": "./dist/cli.js"
   },
   "type": "module",
   "scripts": {
     "build": "tsc",
     "start": "node dist/cli.js",
-    "prepublishOnly": "npm run build"
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
+    "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watch",
+    "windows:test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
+    "windows:test:watch": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --watch",
+    "prepublishOnly": "npm run build && npm test"
   },
   "keywords": [
     "repository",
@@ -18,7 +26,7 @@
     "cli",
     "diff"
   ],
-  "author": "",
+  "author": "Souren Khetcho",
   "license": "MIT",
   "dependencies": {
     "chalk": "^5.3.0",
@@ -26,9 +34,12 @@
     "diff": "^5.1.0"
   },
   "devDependencies": {
-    "@types/diff": "^5.0.3",
+    "@types/diff": "^5.2.3",
     "@types/jest": "^29.5.14",
-    "@types/node": "^20.0.0",
-    "typescript": "^5.0.0"
+    "@types/node": "^20.17.10",
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.7.2"
   }
 }
