--- a/package.json
+++ b/package.json
@@ -8,16 +8,14 @@
     "url": "git+https://github.com/skhetcho/compare-repos.git"
   },
   "bin": {
-    "compare-repos": "./dist/cli.js"
+    "compare-repos": "dist/cli.js"
   },
   "type": "module",
   "scripts": {
     "build": "tsc",
     "start": "node dist/cli.js",
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
-    "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watch",
-    "windows:test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
-    "windows:test:watch": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --watch",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
+    "test:watch": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --watch",
     "prepublishOnly": "npm run build && npm test"
   },
   "keywords": [
